# TFG

./: .gitignore  README.md  analisis_experimentos.py  analisis_experimentos_v2.py  experimentos_pddl.csv  experimentos_pddl_v2.csv  final_log.json  goals.txt  log.json  log.txt  prompts.py  pyproject.toml  reajustar.py  validation_results.csv
llm_planners/: .env.copy  .gitignore  README.md  cuadros.csv  prompts.py  pyproject.toml  utils.py
llm_planners/langchain_planner/scripts_evaluacion/: chat_flujo_completo.py
llm_planners/ollama_planner/: create_plan.py
llm_planners/ollama_planner/scripts_evaluacion/: validator.py
llm_planners/pddl/: plan4  problem.pddl
llm_planners/scripts/: run_chat_10_times.sh
museo_tfg/: .gitignore  README.md  ssh_example
museo_tfg/museo_plansys/: CMakeLists.txt  package.xml
museo_tfg/museo_plansys/behavior_trees_xml/: explain.xml
museo_tfg/museo_plansys/config/: bringup_params.yaml  params.yaml
museo_tfg/museo_plansys/explicacion_respuestas/: banistas_en_asnieres.txt  composition_viii.txt  el_3_de_mayo_de_1808.txt  el_hijo_del_hombre.txt  el_jardin_de_las_delicias.txt  elgrito.txt  guernica.txt  impresion_sol_naciente.txt  la_creacion_de_adan.txt  la_rendicion_de_breda.txt  la_ultima_cena.txt  maestro_aprendiz.txt  monalisa.txt  whistlers_mother.txt
museo_tfg/museo_plansys/include/museo_plansys/behavior_tree_nodes/: ExplainPainting.hpp  TTSAction.hpp
museo_tfg/museo_plansys/launch/: trabajo_final_plansys_launch.py
museo_tfg/museo_plansys/pddl/: domain.pddl  plan.txt  plan1.txt  plan2.txt  plan3.txt  problem.pddl
museo_tfg/museo_plansys/src/: explain_action_node.cpp  library_controller_node.cpp  move_fake_action_node.cpp  recharge_action_node.cpp  ssh_prueba.cpp  tts_client_node.cpp  welcome_action_node.cpp
museo_tfg/museo_plansys/src/behavior_tree_nodes/: ExplainPainting.cpp  Move.cpp  TTSAction.cpp
museo_tfg/my_interfaces/: CMakeLists.txt  package.xml
museo_tfg/my_interfaces/srv/: SpeechToText.srv
museo_tfg/my_llm_plan_solver/: CMakeLists.txt  package.xml
museo_tfg/my_python_pkg/: package.xml  setup.py
museo_tfg/my_tamer_plan_solver/: CHANGELOG.rst  CMakeLists.txt  README.md  my_tamer_plan_solver_plugin.xml  package.xml
museo_tfg/plansys2_tamer_plan_solver/: README.md  package.xml
museo_tfg/trabajo_final_plansys/: package.xml
museo_tfg/trabajo_final_plansys/behavior_trees_xml/: search_book.xml  solve_rubik.xml
museum_navigation/: .gitignore  README.md
museum_navigation/museo_plansys/: CMakeLists.txt
museum_navigation/my_interfaces/: CMakeLists.txt  package.xml
museum_navigation/my_llm_plan_solver/: CHANGELOG.rst  my_llm_plan_solver_plugin.xml
museum_navigation/speech_services/: package.xml  setup.cfg  setup.py
pddl/: domain.pddl  problem.pddl
planner_ollama/: example.py  log.txt
plansys2_tamer_plan_solver/: CHANGELOG.rst  CMakeLists.txt  plansys2_tamer_plan_solver_plugin.xml
scripts/: create_explain_files.py  re_practice.py  run_chat_10_times.sh  split_log_gpt.py  trim_plans.py  update_tfg_ia.sh  validate.bash
tfg-ia/: .gitignore  README.md  experimentos_pddl.csv  experimentos_pddl_v2.csv  goals.txt  log.json  log.txt  log_gpt.txt  logs_script.txt  logs_script_deepseek_razonamiento.txt  prompts.py  pyproject.toml  utils.py
tfg-ia/pddl/: domain.pddl  problem.pddl
tfg-ia/scripts/: analisis_experimentos.py  create_explain_files.py  run_chat_10_times.sh
tfg-ia/tfg_langchain/: get_plan.py
tfg-ia/tfg_langchain/scripts_evaluacion/: chat_flujo_completo.py  return_goal_tools_langchain.py
tfg-ia/tfg_ollama/: create_plan.py
tfg-ia/tfg_ollama/logs/: log.json  log.txt  log_validator.txt
tfg-ia/tfg_ollama/scripts_evaluacion/: cuadros.ipynb  doble_modelo_correccion.py  plan_pruebas.py  validator.py
tfg_langchain/: chat.py  chatPago.py  chatPago_copy.py  chat_flujo_completo.py  client_validate.py  get_plan.py  log.json  log.txt  return_goal.py
tfg_langchain/scripts_evaluacion/: chat_flujo_completo.py  return_goal_tool_genai.py  return_goal_tools_langchain.py
tfg_ollama/: copy_example.py  create_plan.py  cuadros.csv  cuadros.ipynb  doble_modelo_correccion.py  estructured_output.py  example.py  get_goal_from_csv.py  hola_mundo.py  input_chat.py  log.json  log.txt  log_validator.json  log_validator.txt  logv2.txt  logv2.yaml  my_file.txt  my_model.py  preguntas_sobre_csv.py  probando.py  re_practice.py  validator.py
tfg_ollama/logs/: log.json  log.txt  log_validator.json  logv2.txt
tfg_ollama/scripts_evaluacion/: get_goal_from_csv.py
tfg_ollama/scripts_evaluacion/logs/: logv2.txt
trabajo_final_plansys/: CMakeLists.txt
trabajo_final_plansys/behavior_trees_xml/: attend_visitors.xml
trabajo_final_plansys/config/: params.yaml
trabajo_final_plansys/pddl/: problem.pddl
(+64 files in other folders)
